Accessibility issue fixed

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
       <div class="input-wrapper">
         <form onsubmit="return finalRenderLogic()">
-        <input type="text" id="ip-input" autocomplete="off" placeholder="Search for an IP address or domain...">
-        <button id="ip-submit"> <img src="images/icon-arrow.svg" alt="" > </button>
+        <input aria-label="Search IP or Domain" type="text" id="ip-input" autocomplete="off" placeholder="Search for an IP address or domain...">
+        <button aria-label="Submit IP or Domain" id="ip-submit"> <img src="images/icon-arrow.svg" alt="" > </button>
       </form>
       </div>
       
